fix(styles): change text alignment of table section header to left

--- a/assets/style.css
+++ b/assets/style.css
@@ -659,7 +659,7 @@ label {
     }
 
     .table-section h3 {
-        text-align: center;
+        text-align: left;
         margin: 0 0 1rem;
         font-weight: 700;
         font-size: 10pt;
